--- a/strongs/api/templates/base.html
+++ b/strongs/api/templates/base.html
@@ -2,6 +2,21 @@
 
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta charset="utf-8">
+        <meta content="yes" name="apple-mobile-web-app-capable">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+        <link href="{% static "media/iPhone5_splash.png" %}" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
+        <link rel="shortcut icon" href="{% static "media/favicon.ico" %}">
+        <link rel="apple-touch-icon" href="{% static "media/icon_iPhone5.png" %}">
+
+        <link href="{% static "css/style.css" %}" rel="stylesheet">
+        <link href="{% static "tooltipster/css/tooltipster.css" %}" rel="stylesheet">
+        <link href="{% static "tooltipster/css/themes/tooltipster-shadow.css" %}" rel="stylesheet">
     </head>
     <body ng-app="{% block ng_app %}strongs.app.static{% endblock %}">
         <div class="container">
@@ -27,6 +42,7 @@
         <script src="{% static "underscore/underscore.js" %}"></script>
         <script src="{% static "angular/angular.js" %}"></script>
         <script src="{% static "angular-resource/angular-resource.js" %}"></script>
+        <script src="{% static "tooltipster/js/jquery.tooltipster.min.js" %}"></script>
         <script src="{% static "js/script.js" %}"></script>
         {% endblock %}
     </body>
