Added jquery library

--- a/strongs/api/templates/base.html
+++ b/strongs/api/templates/base.html
@@ -39,6 +39,7 @@
             </div>
         </div>
         {% block js %}
+        <script src="{% static "jquery/dist/jquery.min.js" %}"></script>
         <script src="{% static "underscore/underscore.js" %}"></script>
         <script src="{% static "angular/angular.js" %}"></script>
         <script src="{% static "angular-resource/angular-resource.js" %}"></script>
