--- a/strongs/src/less/content.less
+++ b/strongs/src/less/content.less
@@ -57,6 +57,7 @@
     right: 3px;
     padding: 0px 3px 3px 3px;
     border:1px solid rgba(155,155,155,0.75);
+    display: block;
 }
 
 .switchTr > div {
