--- a/strongs/api/templates/base.html
+++ b/strongs/api/templates/base.html
@@ -108,6 +108,7 @@
         <script src="{% static "angular/angular.js" %}"></script>
         <script src="{% static "angular-resource/angular-resource.js" %}"></script>
         <script src="{% static "tooltipster/js/jquery.tooltipster.min.js" %}"></script>
+        <script src="{% static "angular-local-storage/dist/angular-local-storage.min.js" %}"></script>
         <script src="{% static "js/script.js" %}"></script>
         {% endblock %}
     </body>
