--- a/strongs/api/templates/index.html
+++ b/strongs/api/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block ng_app %}strongs.app{% endblock %}
-{% block ng_controller %}AppController{% endblock %}
+{% block ng_controller %}MainController{% endblock %}
 {% block content %}
 {% verbatim %}
 <div ng-repeat="i in [0, 1, 2, 3]">
@@ -20,28 +20,9 @@
                     <span class="versenr vers-{{ v.vers }}">
                         {{v.vers}}&nbsp;
                     </span>
-                    <span ng-bind-html="v.versText"></span>
+                    <span ng-bind-html="v.versText|correctverstext"></span>
                 </div>
             </div>
-        <!--    {% for v in verses1 %}
-                <div class="verse" id="{{v.vers.bookNr.short_name}}{{v.vers.chapterNr}}_{{v.vers.versNr}}">
-                    <span class="versenr vers-{{ v.vers.versNr }}">
-                        {% if user.is_authenticated %}
-                            <a class="tooltip" title="Hinzufügen zur Versliste:<br/>
-                                {% for vl in versLists %}
-                                    <a class='add-to-verslist' onclick='addVersToList(this)' data='{{v.vers.bookNr.nr}}_{{v.vers.chapterNr}}_{{v.vers.versNr}}/{{ vl.id }}'>
-                                        <span class='pad-left glyphter logogreen'>e</span>{{ vl.title }}</a><br/>
-                                {% endfor %}">
-                        {% endif %}
-                        {{v.vers.versNr}}
-                        {% if user.is_authenticated %}
-                            </a>
-                        {% endif %}&nbsp;
-                    </span>
-                    {{v.versText|correctverstext}}
-                </div>
-            {% endfor %}
-            -->
         </div>
         <p class="copyright">
             {{ bible_hint1 }}
